socket.io events challenge

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,12 @@
   </head>
   <body>
     Chat App
-    <button id="btnIncrement">+1</button>
+
+    <form id="frmMessage">
+      <input name="message" type="text" placeholder="Message..."/>
+      <button >Search</button>
+    </form>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
   </body>
