--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,16 @@
   <body>
     Chat App
 
+    <br>
+    <br>
+
     <form id="frmMessage">
       <input name="message" type="text" placeholder="Message..."/>
       <button >Search</button>
     </form>
+
+    <br>
+    <button id="btnLocation">Send Location</button>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
