--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,11 @@
   <body>
     Chat App
 
-    <br>
-    <br>
+    <hr>
+
+    <div id="messages">
+
+    </div>
 
     <form id="frmMessage">
       <input name="message" type="text" placeholder="Message..."/>
@@ -17,6 +20,15 @@
     <br>
     <button id="btnLocation">Send Location</button>
 
+    <script id="messageTemplate" type="text/html">
+      <div>
+        <p>{{message}}</p>
+      </div>
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
   </body>
