rendering timestamp for message

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
     <script id="messageTemplate" type="text/html">
       <div>
-        <p>{{message}}</p>
+        <p>{{createdAt}} - {{message}}</p>
       </div>
     </script>
 
