--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,7 @@
     <script id="locationMessageTemplate" type="text/html">
       <div>
         <p>
-          <a href="{{url}}" target="__blank">
-            My current location
-          </a>
+          {{createdAt}} - <a href="{{url}}" target="__blank">My current location</a>
         </p>
       </div>
     </script>
