--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,46 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <title>Chat App</title>
+    <link rel="icon" href="/img/favicon.png">
+    <link rel="stylesheet" href="/css/styles.min.css">
   </head>
   <body>
-    Chat App
+    <div class="chat">
+      <div class="chat__sidebar">
 
-    <hr>
+      </div>
+      <div class="chat__main">
+        <div id="messages" class="chat__messages"></div>
 
-    <div id="messages">
+        <div class="compose">
+          <form id="frmMessage">
+            <input name="message" type="text" placeholder="Message..."/>
+            <button >Send</button>
+          </form>
 
+          <button id="btnLocation">Send Location</button>
+        </div>
+      </div>
     </div>
 
-    <form id="frmMessage">
-      <input name="message" type="text" placeholder="Message..."/>
-      <button >Send</button>
-    </form>
-
-    <br>
-    <button id="btnLocation">Send Location</button>
-
     <script id="messageTemplate" type="text/html">
-      <div>
-        <p>{{createdAt}} - {{message}}</p>
+      <div class="message">
+        <p>
+          <span class="message__name">Some Username</span>
+          <span class="message__meta">{{createdAt}}</span>
+        </p>
+        <p>{{message}}</p>
       </div>
     </script>
 
     <script id="locationMessageTemplate" type="text/html">
-      <div>
+      <div class="message">
         <p>
-          {{createdAt}} - <a href="{{url}}" target="__blank">My current location</a>
+          <span class="message__name">Some Username</span>
+          <span class="message__meta">{{createdAt}}</span>
         </p>
+        <p><a href="{{url}}" target="__blank">My current location</a></p>
       </div>
     </script>
 
